--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -18,10 +18,14 @@ http {
       proxy_pass_header X-App-Pool;
       proxy_pass_header X-Release-Id;
 
-      # Failover
-      proxy_next_upstream error timeout http_500 http_502 http_503;
+      # Failover + Retry logic
+      proxy_next_upstream error timeout http_500 http_502 http_503 http_504;
+			proxy_next_upstream_tries 2;
+			proxy_next_upstream_timeout 8s;
+
       proxy_connect_timeout 2s;
       proxy_read_timeout 2s;
+			proxy_send_timeout 3s;
     }
 
     location /healthz {
