--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -14,11 +14,8 @@ http {
     location / {
       proxy_pass http://app_pool;
 
-      # Custom Headers
-      proxy_pass_header X-App-Pool;
-      proxy_pass_header X-Release-Id;
-
       # Failover
+      proxy_next_upstream_tries 2;
       proxy_next_upstream error timeout http_500 http_502 http_503;
       proxy_connect_timeout 2s;
       proxy_read_timeout 2s;
